syntax = "proto3";
package irismod.nft;

import "gogoproto/gogo.proto";
import "irismod/nft/nft.proto";

option go_package = "mods.irisnet.org/nft/types";

// GenesisState defines the NFT module's genesis state
message GenesisState {
  repeated Collection collections = 1 [ (gogoproto.nullable) = false ];
}
